--- a/src/index.html
+++ b/src/index.html
@@ -6,27 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>js-hw-10-food</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
   </head>
 
   <body>
     <div class="toolbar">
       <!-- Разметка переключателя темы -->
       <div class="theme-switch">
-        <svg class="theme-switch__icon" role="img" aria-label="Иконка солнца">
-          <use href="./images/sprite.svg#sun"></use>
+        <svg class="theme-switch__icon"
+          role="img"
+          aria-label="Иконка солнца">
+            <use href="./images/sprite.svg#sun"></use>
         </svg>
     
         <div class="theme-switch__control">
-          <input class="theme-switch__toggle" type="checkbox" name="theme" id="theme-switch-toggle"
-            aria-label="Переключить между тёмной и светлой темой" />
-          <label aria-hidden="true" class="theme-switch__track" for="theme-switch-toggle">
+          <input class="theme-switch__toggle"
+            type="checkbox"
+            name="theme"
+            id="theme-switch-toggle"
+            aria-label="Переключить между тёмной и светлой темой"
+          />
+
+          <label class="theme-switch__track"
+            aria-hidden="true"
+            for="theme-switch-toggle">
           </label>
+
           <div aria-hidden="true" class="theme-switch__marker"></div>
         </div>
     
-        <svg class="theme-switch__icon" aria-label="Иконка луны">
-          <use href="./images/sprite.svg#moon"></use>
+        <svg class="theme-switch__icon"
+          aria-label="Иконка луны">
+            <use href="./images/sprite.svg#moon"></use>
         </svg>
       </div>
     </div>
@@ -34,8 +45,6 @@
     <!-- В этот список рендери разметку меню -->
     <ul class="menu js-menu"></ul>
 
-
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script> -->
-    <script src="./js/index.js"></script> 
+    <script src="./index.js"></script> 
   </body>
 </html>
